# rust-problems

api-project/: Cargo.toml  run_migrations.md
api-project/src/: main.rs  models.rs  utils.rs
api-project/src/handlers/: handlers_inner.rs  mod.rs
api-project/src/persistence/: answers_dao.rs  questions_dao.rs
cli-project/: Cargo.toml
cli-project/data/: db.json
cli-project/src/: db.rs  models.rs  navigator.rs
cli-project/src/ui/: prompts.rs
cli-project/src/ui/pages/: mod.rs  page_helpers.rs
