[package]
name = "stackoverflow-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0", features = ["json", "uuid"] }
uuid = { version = "1.0", features = ["v1", "v4"] }
time = { version = "0.3.31" }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid",
] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
